--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Archive-StringToZip
-version:      1.01
+version:      1.02
 version_from: lib/Archive/StringToZip.pm
 installdirs:  site
 requires:
     Archive::Zip:                  0
     IO::String:                    0
+    Test::Exception:               0
     Test::More:                    0
 
 distribution_type: module
