--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Archive-StringToZip
-version:      1.02
-version_from: lib/Archive/StringToZip.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Archive-StringToZip
+version:             1.03
+abstract:            Transforms a string to a zip
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.31
+distribution_type:   module
+requires:     
     Archive::Zip:                  0
     IO::String:                    0
     Test::Exception:               0
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Robbie Bow <robbiebow@canada.com>
